<resources>
    <string name="app_name">LetsCreate</string>
    <string name="home">Home</string>
    <string name="development">Development</string>
    <string name="innovation">Innovation</string>
    <string name="habits">Habits</string>
    <string name="calender">calender</string>
    <string name="edtTitleHint">Tack Title</string>
    <string name="cancel">cancel</string>
    <string name="create">Create</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="timer">Timer</string>
    <string name="reminder">Reminder</string>
    <string name="repeat">Repeat</string>
    <string name="no">No</string>
    <string name="done">Done</string>
    <string name="edtDescriptionHint">Tack Description</string>
</resources>