<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="?android:statusBarColor"
    app:strokeColor="@color/transparent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:cardCornerRadius="25dp"
            android:layout_margin="15dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/iransansweb_light"
                android:hint="@string/edtTitleHint"
                android:textColor="@color/white"
                android:textSize="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:cardCornerRadius="25dp"
            android:layout_margin="15dp"
            android:layout_height="wrap_content"
            android:minHeight="150dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="150dp"
                android:inputType="textMultiLine"
                android:fontFamily="@font/iransansweb_light"
                android:hint="@string/edtDescriptionHint"
                android:textColor="@color/white"
                android:gravity="top"
                android:textSize="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="15dp">
            <ImageView
                android:id="@+id/schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar_today_icon"/>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <androidx.cardview.widget.CardView
                android:id="@+id/white"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:cardBackgroundColor="@color/white"
                android:layout_marginHorizontal="7dp"
                app:cardCornerRadius="100dp"/>
            <androidx.cardview.widget.CardView
                android:id="@+id/yellow"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:cardBackgroundColor="@color/yellow"
                android:layout_marginHorizontal="7dp"
                app:cardCornerRadius="100dp"/>
            <androidx.cardview.widget.CardView
                android:id="@+id/green"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:cardBackgroundColor="@color/green"
                android:layout_marginHorizontal="7dp"
                app:cardCornerRadius="100dp"/>
            <androidx.cardview.widget.CardView
                android:id="@+id/orange"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:cardBackgroundColor="@color/orange"
                android:layout_marginHorizontal="7dp"
                app:cardCornerRadius="100dp"/>
            <androidx.cardview.widget.CardView
                android:id="@+id/red"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:cardBackgroundColor="@color/red"
                android:layout_marginHorizontal="7dp"
                app:cardCornerRadius="100dp"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="end"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="@font/iransansweb"
                android:text="@string/cancel"
                android:textColor="#BA4E8CF8"
                android:textSize="20dp" />


            <TextView
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="@font/iransansweb_light"
                android:text="@string/create"
                android:textColor="@color/blue"
                android:textSize="20dp" />

        </LinearLayout>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>