<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="15dp"
    app:strokeColor="@color/transparent"
    app:cardBackgroundColor="@color/originalBlack">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <CalendarView
            android:id="@+id/calender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/calenderDisable"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#AD252525"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@id/calender"
            app:layout_constraintBottom_toBottomOf="@id/calender"
            app:layout_constraintStart_toStartOf="@id/calender"
            app:layout_constraintEnd_toEndOf="@id/calender"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/calender">

            <com.google.android.material.chip.Chip
                android:id="@+id/noDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/iransansweb_light"
                android:text="No Date"
                android:clickable="true"
                android:checkable="true"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="@font/iransansweb_light"
                android:text="Today"
                android:clickable="true"
                android:checkable="true"
                android:checked="true"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/tomorrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/iransansweb_light"
                android:text="Tomorrow"
                android:clickable="true"
                android:checkable="true"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/treeDaysLater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/iransansweb_light"
                android:text="3 Days Later"
                android:clickable="true"
                android:checkable="true"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/thisSunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="@font/iransansweb_light"
                android:text="This Sunday"
                android:clickable="true"
                android:checkable="true"
                android:textColor="@color/white"
                android:textSize="16dp" />
        </com.google.android.material.chip.ChipGroup>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/chipGroup"
            tools:layout_editor_absoluteX="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/timer_icon" />

            <TextView
                android:id="@+id/tvTimer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/iransansweb"
                android:text="@string/timer"
                android:textColor="@color/white"
                android:textSize="18dp" />


            <TextView
                android:id="@+id/tvTimerLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:fontFamily="@font/iransansweb_light"
                android:text="18:00"
                android:textColor="@color/darkGray"
                android:textSize="15dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:layout_editor_absoluteX="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/reminder_icon" />

            <TextView
                android:id="@+id/tvReminder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/iransansweb"
                android:text="@string/reminder"
                android:textColor="@color/white"
                android:textSize="18dp" />


            <TextView
                android:id="@+id/tvReminderLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:fontFamily="@font/iransansweb_light"
                android:text="17:55"
                android:textColor="@color/darkGray"
                android:textSize="15dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            tools:layout_editor_absoluteX="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/repeat_icon" />

            <TextView
                android:id="@+id/tvRepeat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/iransansweb"
                android:text="@string/repeat"
                android:textColor="@color/white"
                android:textSize="18dp" />


            <TextView
                android:id="@+id/tvRepeatLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:fontFamily="@font/iransansweb_light"
                android:text="@string/no"
                android:textColor="@color/darkGray"
                android:textSize="15dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="@font/iransansweb"
                android:text="@string/cancel"
                android:textColor="#BA4E8CF8"
                android:textSize="20dp" />


            <TextView
                android:id="@+id/tvDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="@font/iransansweb_light"
                android:text="@string/done"
                android:textColor="@color/blue"
                android:textSize="20dp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>